@@ -8,7 +8,6 @@
 package com.powsybl.iidm.serde.extensions;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
 import com.powsybl.commons.extensions.ExtensionSerDe;
@@ -64,7 +63,7 @@ public class SlackTerminalSerDe extends AbstractVersionableNetworkExtensionSerDe
 
     @Override
     public List<InputStream> getXsdAsStreamList() {
-        return ImmutableList.of(getClass().getResourceAsStream("/xsd/slackTerminal_V1_0.xsd"),
+        return List.of(getClass().getResourceAsStream("/xsd/slackTerminal_V1_0.xsd"),
                 getClass().getResourceAsStream("/xsd/slackTerminal_V1_1.xsd"),
                 getClass().getResourceAsStream("/xsd/slackTerminal_V1_2.xsd"),
                 getClass().getResourceAsStream("/xsd/slackTerminal_V1_3.xsd"),
